--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c7496d2f0.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Accueil</title>
 </head>
 <body>
 
     <section class="container-home">
 
         <header>
-            <img src="img/canestin.jpg" alt="Canestin">
+            <img src="img/logo-canestin.png" alt="Canestin">
         
             <ul class="navbar">
-                <li><a href="#home">Accueil</a></li>
-                <li><a href="#about">A propos</a></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="html/about.html">A propos</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -40,12 +40,12 @@
                 <h1> <span>CANESTIN</span> NDONG</h1>
                 <h3> Etudiant ingénieur, <span> développeur Web</span></h5>
                 <div class="social">
-                    <a href="#"> <img src="img/linkedin.png"> </a>
-                    <a href="#"> <img src="img/github.png"> </a>  
-                    <a href="#"> <img src="img/instagram.png"> </i></a>
-                    <a href="#"> <img src="img/twitter.png"> </i></a>
+                    <a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank"> <img src="img/linkedin.png"> </a>
+                    <a href="https://github.com/Canestin" target="_blank"> <img src="img/github.png"> </a>  
+                    <a href="https://www.instagram.com/canestin_off/" target="_blank"> <img src="img/instagram.png"> </i></a>
+                    <a href="https://twitter.com/CanestinN/" target="_blank"> <img src="img/twitter.png"> </i></a>
                 </div>
-                <a href="#" class="btn">About Me</a>
+                <span href="#">Follow Me</span> 
             </div>
         </div>
     </section>
