--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="social">
                     <a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank"> <img src="img/linkedin.png"> </a>
                     <a href="https://github.com/Canestin" target="_blank"> <img src="img/github.png"> </a>  
-                    <a href="https://www.instagram.com/canestin_off/" target="_blank"> <img src="img/instagram.png"> </i></a>
+                    <a href="mailto:canestinng@gmail.com" target="_blank"> <img src="img/gmail.png"> </i></a>
                     <a href="https://twitter.com/CanestinN/" target="_blank"> <img src="img/twitter.png"> </i></a>
                 </div>
                 <span href="#">Follow Me</span> 
