--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Canestin Ndong">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
@@ -24,8 +24,9 @@
             <ul class="navbar">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="html/about.html">A propos</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="html/portfolio.html">Portfolio</a></li>
+                <li><a href="html/contact">Contact</a></li>
+                <li><button id="lang" href="#">Anglais</button></li>
             </ul>
         </header>
     
