--- a/html/about.html
+++ b/html/about.html
@@ -21,9 +21,10 @@
         
             <ul class="navbar">
                 <li><a href="../index.html">Accueil</a></li>
-                <li><a href="#">A propos</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="about.html">A propos</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><button id="lang" href="#">Anglais</button></li>
             </ul>
         </header>
 
