--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Site web personnel">
@@ -12,21 +12,58 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <title>Portfolio</title>
+    <script src="../App.js" defer></script>
+    <title>Mes Projets</title>
 </head>
 <body>
     <section id="header">
         <header>
-            <img src="../img/logo-canestin.png" alt="Canestin">
+            <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
         
             <ul class="navbar">
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="about.html">A propos</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="portfolio.html">Mes Projets</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><button id="lang" href="#">Anglais</button></li>
             </ul>
         </header>
+
+        <div class="container">
+
+            <div class="text">
+                <h1> BIENVENUE </h1>
+                <h1> DANS MES </h1>
+                <h1 style="color: #5bcba7;"> PROJETS </h1>
+            </div>
+
+            <div class="icones">
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <div> <img src="../img/console.png" alt=""> </div>
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>  
+
+        </div>
 
     <footer>
         <h3>CONTACT</h3>
