--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Site web personnel">
@@ -19,12 +19,12 @@
     <section class="container-home">
 
         <header>
-            <img src="img/logo-canestin.png" alt="Canestin">
+            <img id="logo" src="img/logo-noir.png" alt="Canestin">
         
             <ul class="navbar">
                 <li><a href="#">Accueil</a></li>
                 <li><a href="html/about.html">A propos</a></li>
-                <li><a href="html/portfolio.html">Portfolio</a></li>
+                <li><a href="html/portfolio.html">Mes Projets</a></li>
                 <li><a href="html/contact">Contact</a></li>
                 <li><button id="lang" href="#">Anglais</button></li>
             </ul>
