--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -24,7 +24,6 @@
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="about.html">A propos</a></li>
                 <li><a href="portfolio.html">Mes Projets</a></li>
-                <li><a href="contact.html">Contact</a></li>
                 <li><button id="lang" href="#">Anglais</button></li>
             </ul>
         </header>
@@ -32,36 +31,97 @@
         <div class="container">
 
             <div class="text">
-                <h1> BIENVENUE </h1>
-                <h1> DANS MES </h1>
-                <h1 style="color: #5bcba7;"> PROJETS </h1>
+                <div>
+                    <h1> BIENVENUE </h1>
+                    <h1> DANS MES </h1>
+                    <h1 style="color: #5bcba7;"> PROJETS </h1>
+                </div>
             </div>
 
             <div class="icones">
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <div> <img src="../img/console.png" alt=""> </div>
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <div>
+                    <img src="../img/js.png" alt="JavaScript">
+                    <img src="../img/html5.png" alt="HTML">
+                    <img src="../img/css-3.png" alt="CSS">
+                    <img src="../img/nodejs.png" alt="NodeJS">
+                    <img src="../img/bootstrap.png" alt="BootStrap">
+                    <img src="../img/react.png" alt="React">
+                    <img src="../img/php.png" alt="PHP">
+                    <img src="../img/mysql.png" alt="MySQL">
+                    <img src="../img/java.png" alt="Java">
+                </div>
             </div>  
+
+        </div>
+
+        <h1> Tous ses projects sont fait avec le coeur !</h1>
+        <h3> Ceux étant seul ont été entrepris avec ma logique de developpement.</h3>
+
+        <div class="projects">
+
+           <div class="project-bloc">
+                <div class="bloc-img">
+                    <img src="../img/baby-bracelet.png" alt="">
+                </div>
+
+                <div class="bloc-description">
+                    <h1>Baby Bracelet</h1>
+                    <p> Projet académique. Site web permettant aux parents d'avoir 
+                        en temps réel l'évolution des données physiologiques de leur
+                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    </p>
+
+                    <button>Voir plus</button>
+                </div>
+            </div>
+
+            <div class="project-bloc">
+                <div class="bloc-img">
+                    <img src="../img/baby-bracelet.png" alt="">
+                </div>
+
+                <div class="bloc-description">
+                    <h1>Baby Bracelet</h1>
+                    <p> Projet académique. Site web permettant aux parents d'avoir 
+                        en temps réel l'évolution des données physiologiques de leur
+                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    </p>
+
+                    <button>Voir plus</button>
+                </div>
+            </div>
+
+            <div class="project-bloc">
+                <div class="bloc-img">
+                    <img src="../img/baby-bracelet.png" alt="">
+                </div>
+
+                <div class="bloc-description">
+                    <h1>Baby Bracelet</h1>
+                    <p> Projet académique. Site web permettant aux parents d'avoir 
+                        en temps réel l'évolution des données physiologiques de leur
+                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    </p>
+
+                    <button>Voir plus</button>
+                </div>
+            </div>
+
+            <div class="project-bloc">
+                <div class="bloc-img">
+                    <img src="../img/baby-bracelet.png" alt="">
+                </div>
+
+                <div class="bloc-description">
+                    <h1>Baby Bracelet</h1>
+                    <p> Projet académique. Site web permettant aux parents d'avoir 
+                        en temps réel l'évolution des données physiologiques de leur
+                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    </p>
+
+                    <button>Voir plus</button>
+                </div>
+            </div>
 
         </div>
 
