--- a/html/about.html
+++ b/html/about.html
@@ -92,7 +92,7 @@
                         <div>Ergonomie et interfaces Numériques</div>
                         <div>Conception Systèmes Embarqués</div>
                         <div>Sécurité numérique et Réseaux</div>
-                        <div>Science et Traitement des données</div>
+                        <div>Objets et Systèmes Connectés</div>
                         <div>Numérique et Santé</div>
                         <div>Innovation et Création d'entreprise</div>
                     </div>
@@ -109,7 +109,7 @@
                 <div class="essai">
                     <img src="../img/can3.jpg" loading="lazy" alt="Canestin à Marrakech"> 
                     <div class="img-text">
-                        <h4>Lors d'un week-end touristique <br> à Marrakech</h4>
+                        <h4>Lors d'un week-end <br> à Marrakech</h4>
                     </div>
                 </div>
 
