--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -16,11 +16,13 @@
     <title>Mes Projets</title>
 </head>
 <body>
-    <section id="header">
         <header>
-            <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
-        
-            <ul class="navbar">
+            <div class="headerMobile">
+                <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
+                <img id="menu" src="../img/menu.png" alt="Icon menu">
+            </div>
+
+            <ul class="navbar canou">
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="about.html">A propos</a></li>
                 <li><a href="portfolio.html">Mes Projets</a></li>
@@ -54,24 +56,23 @@
 
         </div>
 
-        <h1> Tous ses projects sont fait avec le coeur !</h1>
-        <h3> Ceux étant seul ont été entrepris avec ma logique de developpement.</h3>
+        <h1> Tous ses projets ont été fait <span>avec le coeur</span> !</h1>
 
         <div class="projects">
 
            <div class="project-bloc">
                 <div class="bloc-img">
-                    <img src="../img/baby-bracelet.png" alt="">
+                    <img src="../img/canchess.png" alt="">
                 </div>
 
                 <div class="bloc-description">
-                    <h1>Baby Bracelet</h1>
-                    <p> Projet académique. Site web permettant aux parents d'avoir 
-                        en temps réel l'évolution des données physiologiques de leur
-                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    <h1>CanChess</h1>
+                    <p> Projet personnel en finition. Plateforme pemettant de jouer 
+                        aux échecs en ligne. Algorithme du jeu développé en JavaScript,
+                        mise en place de la connectivité réseau en NodeJS, Socket.io.
                     </p>
 
-                    <button>Voir plus</button>
+                    <button id="dd">Voir plus</button>
                 </div>
             </div>
 
@@ -93,14 +94,14 @@
 
             <div class="project-bloc">
                 <div class="bloc-img">
-                    <img src="../img/baby-bracelet.png" alt="">
+                    <img src="../img/nourtas.png" alt="">
                 </div>
 
                 <div class="bloc-description">
-                    <h1>Baby Bracelet</h1>
-                    <p> Projet académique. Site web permettant aux parents d'avoir 
-                        en temps réel l'évolution des données physiologiques de leur
-                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    <h1>Nour Tas</h1>
+                    <p> Projet personnel, qui prit son inspiration à partir d'un cadeau,
+                        une oeuvre aux couleurs chaudes et vives qui a su me toucher
+                        et que j'immortalise à travers ce site. Merci Nour et Tasnim !
                     </p>
 
                     <button>Voir plus</button>
@@ -109,14 +110,14 @@
 
             <div class="project-bloc">
                 <div class="bloc-img">
-                    <img src="../img/baby-bracelet.png" alt="">
+                    <img src="../img/yokai.png" alt="">
                 </div>
 
                 <div class="bloc-description">
-                    <h1>Baby Bracelet</h1>
-                    <p> Projet académique. Site web permettant aux parents d'avoir 
-                        en temps réel l'évolution des données physiologiques de leur
-                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    <h1>Yokai Game</h1>
+                    <p> Projet académique. Programme Java permettant de jouer au jeu 
+                        de Yokai en mode console. L'envirrenoment de developpment utilisé
+                         est IntelliJ. Vous pouvez voir la structure en sur Github.
                     </p>
 
                     <button>Voir plus</button>
