--- a/html/about.html
+++ b/html/about.html
@@ -19,11 +19,13 @@
     <section>
         <header>
             <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
+            <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
+            <img id="menu" src="../img/menu.png" alt="Icon menu">
         
-            <ul class="navbar">
+            <ul class="navbar navbarMask">
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="about.html">A propos</a></li>
-                <li><a href="portfolio.html">Mes Projets</a></li>
+                <li><a href="projects.html">Mes Projets</a></li>
                 <li><button id="lang" href="#">Anglais</button></li>
             </ul>
         </header>
