--- a/html/projects.html
+++ b/html/projects.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Canestin Ndong">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/portfolio.css">
+    <link rel="stylesheet" href="../css/projects.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
@@ -19,13 +19,14 @@
         <header>
             <div class="headerMobile">
                 <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
+                <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
                 <img id="menu" src="../img/menu.png" alt="Icon menu">
             </div>
 
-            <ul class="navbar canou">
+            <ul class="navbar navbarMask">
                 <li><a href="../index.html">Accueil</a></li>
                 <li><a href="about.html">A propos</a></li>
-                <li><a href="portfolio.html">Mes Projets</a></li>
+                <li><a href="projects.html">Mes Projets</a></li>
                 <li><button id="lang" href="#">Anglais</button></li>
             </ul>
         </header>
