Home page responsive

--- a/html/about.html
+++ b/html/about.html
@@ -18,9 +18,11 @@
 <body>
     <section>
         <header>
-            <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
-            <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
-            <img id="menu" src="../img/menu.png" alt="Icon menu">
+            <div class="headerMobile">
+                <img id="logo" src="../img/logo-blanc.png" alt="logo de Canestin">
+                <img id="logo-noir" src="../img/logo-noir.png" alt="logo de Canestin">
+                <img id="menu" src="../img/menu.png" alt="Icon menu">
+            </div>
         
             <ul class="navbar navbarMask">
                 <li><a href="../index.html">Accueil</a></li>
@@ -31,8 +33,7 @@
         </header>
 
         <div class="container">
-            <!-- <img src="../img/can2.jpg"/> -->
-            <h1> À <span style="color: white; font-size: 80px;"> PROPOS </span> DE MOI </h1>
+            <h1> À <span> PROPOS </span> DE MOI </h1>
             <p> Je suis prêt à partager mes connaissances et mon expérience.</p>
             <span class="text-blanc"> Mais plus encore, à en recevoir !</span>
         </div>
