--- a/fr/accueil.html
+++ b/fr/accueil.html
@@ -7,13 +7,13 @@
     <meta name="author" content="Canestin Ndong">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4c7496d2f0.js" crossorigin="anonymous"></script>
-    <script src="js/index.js" defer></script>
-    <title>Canestin Ndong</title>
+    <script src="../js/index.js" defer></script>
+    <title>Accueil</title>
 </head>
 <body>
 
@@ -26,33 +26,32 @@
             </div>
 
             <ul class="navbar navbarMask">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="en/about.html">About</a></li>
-                <li><a href="en/projects.html">Projects</a></li>
-                <li><button id="lang" onclick="window.location.href='fr/accueil.html';">Francais</button></li>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="apropos.html">A propos</a></li>
+                <li><a href="projets.html">Projets</a></li>
+                <li><button id="lang" onclick="window.location.href='../index.html';">English</button></li>
             </ul>
         </header>
     
         <div id="home">
 
             <div class="home-img">
-                <img src="img/canestin.jpg">
+                <img src="../img/canestin.jpg">
             </div>
 
             <div class="home-text">
-                <h2>Hey ! I am</h2>
+                <h2>Hey ! Moi c'est</h2>
                 <h1> <span>CANESTIN</span> NDONG</h1>
-                <h3> Engineering student,<span> Web developer</span></h5>
+                <h3> Etudiant ingénieur,<span> développeur Web</span></h5>
                 <div class="social">
-                    <a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank"> <img src="img/linkedin.png"> </a>
-                    <a href="https://github.com/Canestin" target="_blank"> <img src="img/github.png"> </a>  
-                    <a href="mailto:canestinng@gmail.com" target="_blank"> <img src="img/gmail.png"> </i></a>
-                    <a href="https://twitter.com/CanestinN/" target="_blank"> <img src="img/twitter.png"> </i></a>
+                    <a href="https://www.linkedin.com/in/canestin-ndong/" target="_blank"> <img src="../img/linkedin.png"> </a>
+                    <a href="https://github.com/Canestin" target="_blank"> <img src="../img/github.png"> </a>  
+                    <a href="mailto:canestinng@gmail.com" target="_blank"> <img src="../img/gmail.png"> </i></a>
+                    <a href="https://twitter.com/CanestinN/" target="_blank"> <img src="../img/twitter.png"> </i></a>
                 </div>
                 <span href="#">Follow Me</span> 
             </div>
         </div>
-    </section>
-    
+    </section>    
 </body>
 </html>
