--- a/en/projects.html
+++ b/en/projects.html
@@ -12,8 +12,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <script src="../App.js" defer></script>
-    <title>Mes Projets</title>
+    <script src="../js/App.js" defer></script>
+    <title>Projects</title>
 </head>
 <body>
         <header>
@@ -24,10 +24,10 @@
             </div>
 
             <ul class="navbar navbarMask">
-                <li><a href="../index.html">Accueil</a></li>
-                <li><a href="about.html">A propos</a></li>
-                <li><a href="projects.html">Mes Projets</a></li>
-                <li><button id="lang" href="#">Anglais</button></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><button id="lang" onclick="window.location.href='../fr/projets.html';">Français</button></li>
             </ul>
         </header>
 
@@ -35,9 +35,9 @@
 
             <div class="text">
                 <div>
-                    <h1> BIENVENUE </h1>
-                    <h1> DANS MES </h1>
-                    <h1 style="color: #5bcba7;"> PROJETS </h1>
+                    <h1> THE CODE </h1>
+                    <h1> IS A REAL</h1>
+                    <h1 style="color: #5bcba7;"> DISTRACT </h1>
                 </div>
             </div>
 
@@ -57,7 +57,7 @@
 
         </div>
 
-        <h1> Tous ses projets ont été fait <span>avec le coeur</span> !</h1>
+        <h1> Made <span>with love</span> !</h1>
 
         <div class="projects">
 
@@ -68,12 +68,12 @@
 
                 <div class="bloc-description">
                     <h1>CanChess</h1>
-                    <p> Projet personnel en finition. Plateforme pemettant de jouer 
-                        aux échecs en ligne. Algorithme du jeu développé en JavaScript,
-                        mise en place de la connectivité réseau en NodeJS, Socket.io.
+                    <p> Personal project in progress. Platform for playing chess online, with 
+                        internal messaging. Game algorithm developed in JavaScript, implementation 
+                        of network connectivity with NodeJS, Socket.io.
                     </p>
 
-                    <button id="dd">Voir plus</button>
+                    <button id="dd">See more</button>
                 </div>
             </div>
 
@@ -84,12 +84,13 @@
 
                 <div class="bloc-description">
                     <h1>Baby Bracelet</h1>
-                    <p> Projet académique. Site web permettant aux parents d'avoir 
-                        en temps réel l'évolution des données physiologiques de leur
-                        bébé; recueillies par des capteurs via la passerelle de l'ISEP.
+                    <p> 
+                        Group academic project. Website allowing parents to have in real time 
+                        on a dashboard the evolution of their baby's physiological data, with 
+                        history of the last hours; collected by sensors via the ISEP gateway.
                     </p>
 
-                    <button>Voir plus</button>
+                    <button>See more</button>
                 </div>
             </div>
 
@@ -100,12 +101,12 @@
 
                 <div class="bloc-description">
                     <h1>Nour Tas</h1>
-                    <p> Projet personnel, qui prit son inspiration à partir d'un cadeau,
-                        une oeuvre aux couleurs chaudes et vives qui a su me toucher
-                        et que j'immortalise à travers ce site. Merci Nour et Tasnim !
+                    <p> Personal project, which took its inspiration from a gift, a work
+                        in warm and bright colors which knew how to touch me and which 
+                        I immortalize through this site. Thank you Nour and Tasnim!
                     </p>
 
-                    <button>Voir plus</button>
+                    <button>See more</button>
                 </div>
             </div>
 
@@ -116,12 +117,12 @@
 
                 <div class="bloc-description">
                     <h1>Yokai Game</h1>
-                    <p> Projet académique. Programme Java permettant de jouer au jeu 
-                        de Yokai en mode console. L'envirrenoment de developpment utilisé
-                         est IntelliJ. Vous pouvez voir la structure en sur Github.
+                    <p> Academic project. Java program allowing to play the Yokai game 
+                        (cooperative game of 2, 3, 4 players whose objective is to bring
+                         together all families of cards, face down) in console mode.
                     </p>
 
-                    <button>Voir plus</button>
+                    <button>See more</button>
                 </div>
             </div>
 
