--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-    <script src="../App.js" defer></script>
+    <script src="../js/App.js" defer></script>
     <title>A propos</title>
 </head>
 <body>
@@ -25,17 +25,18 @@
             </div>
         
             <ul class="navbar navbarMask">
-                <li><a href="../index.html">Accueil</a></li>
-                <li><a href="about.html">A propos</a></li>
-                <li><a href="projects.html">Mes Projets</a></li>
-                <li><button id="lang" href="#">Anglais</button></li>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="apropos.html">A propos</a></li>
+                <li><a href="projets.html">Projets</a></li>
+                <li><button id="lang" onclick="window.location.href='../en/about.html';">English</button></li>
             </ul>
         </header>
 
         <div class="container">
             <h1> À <span> PROPOS </span> DE MOI </h1>
-            <p> Je suis prêt à partager mes connaissances et mon expérience.</p>
-            <span class="text-blanc"> Mais plus encore, à en recevoir !</span>
+            <p> 
+                Je suis quelqu'un d'obstiné, efficace et entreprenant dans mon travail.</p>
+            <span class="text-blanc">Toujours à la recherche de nouvelles compétences !</span>
         </div>
     </section>
 
