--- a/en/about.html
+++ b/en/about.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Site web personnel">
+    <meta name="description" content="Portfolio de Canestin Ndong">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Canestin Ndong">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
