--- a/en/projects.html
+++ b/en/projects.html
@@ -73,7 +73,7 @@
                         of network connectivity with NodeJS, Socket.io.
                     </p>
 
-                    <button id="dd">See more</button>
+                    <button onclick="window.location.href='https://canchess.net/';">See more</button>
                 </div>
             </div>
 
@@ -90,7 +90,7 @@
                         history of the last hours; collected by sensors via the ISEP gateway.
                     </p>
 
-                    <button>See more</button>
+                    <button onclick="window.location.href='https://baby-bracelet.herogu.garageisep.com/';">See more</button>
                 </div>
             </div>
 
@@ -106,7 +106,7 @@
                         I immortalize through this site. Thank you Nour and Tasnim!
                     </p>
 
-                    <button>See more</button>
+                    <button onclick="window.location.href='https://nour-tasnim.w3spaces.com/';" >See more</button>
                 </div>
             </div>
 
@@ -122,7 +122,7 @@
                          together all families of cards, face down) in console mode.
                     </p>
 
-                    <button>See more</button>
+                    <button onclick="window.location.href='https://github.com/Canestin/Yokai-Game';">See more</button>
                 </div>
             </div>
 
