--- a/fr/projets.html
+++ b/fr/projets.html
@@ -36,7 +36,7 @@
             <div class="text">
                 <div>
                     <h1> LE CODE </h1>
-                    <h1> C'EST UNE </h1>
+                    <h1> EST UNE </h1>
                     <h1 style="color: #5bcba7;"> DISTRACT </h1>
                 </div>
             </div>
@@ -89,7 +89,7 @@
                         collectées par des capteurs via la passerelle ISEP.
                     </p>
 
-                    <button>Voir plus</button>
+                    <button onclick="window.location.href='https://baby-bracelet.herogu.garageisep.com/';">Voir plus</button>
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                         et que j'immortalise à travers ce site. Merci Nour et Tasnim !
                     </p>
 
-                    <button>Voir plus</button>
+                    <button onclick="window.location.href='https://nour-tasnim.w3spaces.com/';">Voir plus</button>
                 </div>
             </div>
 
@@ -121,7 +121,7 @@
                         est de réunir toutes les familles de cartes, faces cachées) en mode console.
                     </p>
 
-                    <button>Voir plus</button>
+                    <button onclick="window.location.href='https://github.com/Canestin/Yokai-Game';">Voir plus</button>
                 </div>
             </div>
 
