--- a/en/about.html
+++ b/en/about.html
@@ -107,24 +107,29 @@
 
         <div class="infos"> 
 
+            <div class="button">
+                <img onclick="slideImg(-1)" src="../img/arriere.png" alt="Bouton arriere">
+                <img onclick="slideImg(1)" src="../img/suivant.png" alt="Bouton Avant">
+            </div>
+
             <div class="photos">
 
                 <div class="essai">
-                    <img src="../img/can3.jpg" loading="lazy" alt="Canestin à Marrakech"> 
+                    <img src="../img/can3.jpg" alt="Canestin à Marrakech"> 
                     <div class="img-text">
                         <h4>During a weekend <br> in Marrakech</h4>
                     </div>
                 </div>
 
                 <div class="essai">
-                    <img src="../img/can4.jpg" loading="lazy" alt="Canestin au Parc Asterix"> 
+                    <img src="../img/can4.jpg" alt="Canestin au Parc Asterix"> 
                     <div class="img-text">
                         <h4>Left to live the strong emotions <br> at Parc Asterix</h4>
                     </div>
                 </div>
 
                 <div class="essai">
-                    <img src="../img/can5.jpg" loading="lazy" alt="Canestin au Parc des Princes">
+                    <img src="../img/can5.jpg" alt="Canestin au Parc des Princes">
                     <div class="img-text">
                         <h4>Visiting <br> at the Parc des Princes</h4>
                     </div>
