--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -104,9 +104,22 @@
             </div>
         </div>
 
+        
+        <div class="transition">
+
+            <p> Sinon, en dehors de la programmation j'attache un intérêt 
+                particulier à la découverte de nouveau lieux et aux moments
+                entre amis. 
+            </p>
+
+        </div>  
+
         <div class="infos"> 
-          
-            <h1> Sinon ... </h1>
+
+            <div class="button">
+                <img id="arriere" src="../img/arriere.png" alt="Bouton arriere">
+                <img id="avant" src="../img/suivant.png" alt="Bouton Avant">
+            </div>
 
             <div class="photos">
 
