--- a/fr/projets.html
+++ b/fr/projets.html
@@ -57,7 +57,7 @@
 
         </div>
 
-        <h1> Fait <span>avec Amour</span> !</h1>
+        <h1> Fait <span>avec le coeur</span> !</h1>
 
         <div class="projects">
 
