--- a/en/about.html
+++ b/en/about.html
@@ -103,13 +103,20 @@
             </div>
         </div>
 
-        <h1> Otherwise ... </h1>
+        <div class="transition">
+
+            <p> I also attach an interest
+                particular to the discovery of new places and times
+                between friends. 
+            </p>
+
+        </div>  
 
         <div class="infos"> 
 
             <div class="button">
-                <img onclick="slideImg(-1)" src="../img/arriere.png" alt="Bouton arriere">
-                <img onclick="slideImg(1)" src="../img/suivant.png" alt="Bouton Avant">
+                <img id="arriere" src="../img/arriere.png" alt="Bouton arriere">
+                <img id="avant" src="../img/suivant.png" alt="Bouton Avant">
             </div>
 
             <div class="photos">
