--- a/fr/apropos.html
+++ b/fr/apropos.html
@@ -107,7 +107,7 @@
         
         <div class="transition">
 
-            <p> Sinon, en dehors de la programmation j'attache un intérêt 
+            <p> J'attache aussi un intérêt 
                 particulier à la découverte de nouveau lieux et aux moments
                 entre amis. 
             </p>
@@ -124,21 +124,21 @@
             <div class="photos">
 
                 <div class="essai">
-                    <img src="../img/can3.jpg" loading="lazy" alt="Canestin à Marrakech"> 
+                    <img src="../img/can3.jpg" alt="Canestin à Marrakech"> 
                     <div class="img-text">
                         <h4>Lors d'un week-end <br> à Marrakech</h4>
                     </div>
                 </div>
 
                 <div class="essai">
-                    <img src="../img/can4.jpg" loading="lazy" alt="Canestin au Parc Asterix"> 
+                    <img src="../img/can4.jpg" alt="Canestin au Parc Asterix"> 
                     <div class="img-text">
                         <h4>Parti vivre les émotions fortes <br> au Parc Asterix</h4>
                     </div>
                 </div>
 
                 <div class="essai">
-                    <img src="../img/can5.jpg" loading="lazy" alt="Canestin au Parc des Princes">
+                    <img src="../img/can5.jpg" alt="Canestin au Parc des Princes">
                     <div class="img-text">
                         <h4>En visite <br> au Parc des Princes</h4>
                     </div>
